--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./assets/photo.png" width="150" alt="my photo">
 
     <h2>Summary</h2>
-    <p>I'm a hard working and aspiring web developer, who want to learn a lot.</p>
+    <p>I'm a hard working and aspiring web developer, who wants to learn a lot.</p>
     <hr>
     <h2>Education</h2>
     <ul>
